MDEV-16241 Assertion `inited==RND' failed in handler::ha_rnd_end()

Discrepancy in open indexes due to overwritten `read_partitions` upon
`ha_open()` in `ha_partition::clone()`.

[Fixes tempesta-tech/mariadb#551]